--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              
+              
             ],
             "scripts": []
           },
